force-app/main/default/objects/Event4SalesParams__c/Event4SalesParams__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Parameters to configure manage package</description>
    <label>Event4Sales</label>
</CustomObject>