force-app/main/default/objects/Event4SalesParams__c/fields/Integer_Param__c.field-meta.xml
<CustomField>
    <fullName>Integer_Param__c</fullName>
    <description>Integer param for hours, employes or days</description>
    <label>Integer Param</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>