force-app/main/default/objects/Event4SalesParams__c/fields/Type_Field__c.field-meta.xml
<CustomField>
    <fullName>Type_Field__c</fullName>
    <description>Indicates the field type</description>
    <inlineHelpText>Values avaibles, case sensitive
boolean / integer</inlineHelpText>
    <label>Type Field</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>