force-app/main/default/objects/Event4SalesParams__c/listViews/All_configurations.listView-meta.xml
<ListView>
    <fullName>All_configurations</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Configuration__c</columns>
    <columns>Integer_Param__c</columns>
    <columns>Type_Field__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All configurations</label>
</ListView>